added properties files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=english,dog
+spring.profiles.active=english,dog,qa
+test.username=testUser
+test.password=testPassword
+test.jdbcUrl=someJdbcUrl
