--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: english,dog
+    active: english,dog,qa,dev
 test:
   username: YmlUsername
   password: YmlPassword
